<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:focusable="true"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/toolbarcolor"
        android:gravity="center_horizontal"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:visibility="visible"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:subtitleTextColor="@color/titletext"
        app:titleTextColor="@color/titletext">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_title"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/_50sdp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/instagram_private_videos"
                android:textColor="@color/splashtextcolor"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.appcompat.widget.Toolbar>

    <com.github.florent37.shapeofview.shapes.RoundRectView
        android:id="@+id/laycard"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:shape_roundRect_bottomLeftRadius="20dp"
        app:shape_roundRect_bottomRightRadius="20dp"
        app:shape_roundRect_topLeftRadius="0dp"
        app:shape_roundRect_topRightRadius="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:animateLayoutChanges="true"
            android:background="@color/colorPrimary"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingTop="15dp"
            android:paddingBottom="30dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardinstalogin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                app:cardBackgroundColor="@color/bg_card"
                app:cardCornerRadius="15dp"
                app:cardElevation="0dp"
                app:cardPreventCornerOverlap="false">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginTop="25dp"
                    android:layout_marginBottom="25dp"
                    android:gravity="center"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/txtLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="10dp"
                        android:fontFamily="@font/roboto_bold"
                        android:gravity="start"
                        android:text="@string/instagram_stories"
                        android:textColor="@color/titletext"
                        android:textSize="18sp" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/cl_anon"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_marginBottom="10dp">

                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:src="@drawable/stories_login_img"
                            app:layout_constraintDimensionRatio="H,1:0.6"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <com.facebook.shimmer.ShimmerFrameLayout
                        android:id="@+id/shimmer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/cl_anon"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="4dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:shimmer_auto_start="true"
                        app:shimmer_base_alpha="0.9"
                        app:shimmer_duration="2000"
                        app:shimmer_highlight_alpha="0.5"

                        app:shimmer_highlight_color="@color/shimmerhighlightcolor">

                        <TextView
                            android:id="@+id/opentiktok"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"

                            android:layout_gravity="center"

                            android:background="@drawable/instagram_selector"
                            android:drawableStart="@drawable/instagram"
                            android:drawableEnd="@drawable/ic_baseline_arrow_right_24"
                            android:fontFamily="@font/roboto_regular"
                            android:gravity="center"
                            android:minWidth="0dp"
                            android:minHeight="0dp"
                            android:paddingLeft="18dp"
                            android:paddingTop="10dp"
                            android:paddingRight="18dp"
                            android:paddingBottom="10dp"
                            android:text="@string/login_to_download_stories"
                            android:textAlignment="center"
                            android:textAllCaps="false"
                            android:textColor="@color/colorPrimary"
                            android:textSize="15sp" />
                    </com.facebook.shimmer.ShimmerFrameLayout>
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardinstastory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                app:cardBackgroundColor="@color/bg_card"
                app:cardCornerRadius="15dp"
                app:cardElevation="0dp"
                app:cardPreventCornerOverlap="false">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:layout_marginBottom="25dp"
                    android:orientation="vertical">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:fontFamily="@font/roboto_bold"
                            android:gravity="center"
                            android:padding="5dp"
                            android:text="@string/instagram_stories"
                            android:textColor="@color/titletext"
                            android:textSize="18sp" />

                        <ImageView
                            android:id="@+id/instalogout"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            android:layout_marginEnd="10dp"
                            android:padding="5dp"
                            android:scaleX="-1"
                            android:src="@drawable/ic_logout" />
                    </FrameLayout>


                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/RVUserList"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"

                        />

                    <ProgressBar
                        android:id="@+id/pr_loading_bar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:visibility="gone"


                        />


                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </com.github.florent37.shapeofview.shapes.RoundRectView>


</androidx.constraintlayout.widget.ConstraintLayout>

